delete training materials

--- a/site/general_concepts/operator_chemistry/index.html
+++ b/site/general_concepts/operator_chemistry/index.html
@@ -359,7 +359,7 @@
                     <div class="md-content">
                         <article class="md-content__inner md-typeset">
                             
-                            <a href="https://github.com/EKiefer/training/edit/master/docs/general_concepts\operator_chemistry.md" title="Edit this page" class="md-icon md-content__edit">edit</a>   
+                            <a href="https://github.com/EKiefer/training/edit/master/docs/general_concepts/operator_chemistry.md" title="Edit this page" class="md-icon md-content__edit">edit</a>   
                             <h1>Operator Chemistry</h1>  <h2 id="chemistry">Chemistry</h2>
 <p>Operators need to understand basic chemistry in order to be a successful operator. This section discusses some of the most important topics an operator must know.</p>
 <ul>
