--- a/site/search.html
+++ b/site/search.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./css/theme.css" type="text/css" />
   <link rel="stylesheet" href="./css/theme_extra.css" type="text/css" />
   <link rel="stylesheet" href="./css/highlight.css">
+  <link href="./css/extra.css" rel="stylesheet">
   
   <script src="./js/jquery-2.1.1.min.js"></script>
   <script src="./js/modernizr-2.8.3.min.js"></script>
@@ -72,6 +73,7 @@
       
       <div class="wy-nav-content">
         <div class="rst-content">
+          <div id="sticker">Please note this is a draft document.</div>
           <div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
     <li><a href=".">Docs</a> &raquo;</li>
@@ -85,6 +87,7 @@
 </div>
           <div role="main">
             <div class="section">
+              <div class="stick"></div>
               
 
   <h1 id="search">Search Results</h1>
@@ -131,6 +134,8 @@
     <script src="./js/theme.js"></script>
       <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full"></script>
       <script src="https://use.fontawesome.com/ccef82ad40.js"></script>
+      <script src="./js/extra.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.4/jquery.sticky.js"></script>
 
 </body>
 </html>
