--- a/site/index.html
+++ b/site/index.html
@@ -231,11 +231,6 @@
 <td>Monochloroacetic acid, dichloroacetic acid, trichloroacetic acid, monobromoacetic acid, and dibromoacetic acid. This is a class of disinfection by-products.</td>
 </tr>
 <tr>
-<td>Less Than</td>
-<td>&lt;</td>
-<td>Math symbol meaning "less than."</td>
-</tr>
-<tr>
 <td>Locational Running Annual Average</td>
 <td>LRAA</td>
 <td>The average of four quarterly samples collected in one 12-month period at a specific sampling site.</td>
@@ -785,11 +780,13 @@ Hexachlorocyclo- pentadiene | 50 ug/L | 50 ug/L | ND | <i class="fa fa-smile-o" 
 <hr />
 <h2 id="education-information">Education Information</h2>
 <p>The sources of drinking water, both tap water and bottled water, include rivers, lakes, streams, ponds, reservoirs, springs and wells. As water travels over the surface of the land or through the ground, it dissolves naturally occurring minerals and, in some cases, radioactive material, and can pick up substances resulting from the presence of animals or from human activity. Contaminants that may be present in source water include the following.</p>
+<blockquote>
 <p><strong>Microbial contaminants</strong>, such as viruses and bacteria, which may come from sewage treatment plants, septic systems, agricultural livestock operations and wildlife.  </p>
 <p><strong>Inorganic contaminants</strong>, such as salts and metals, which can be naturally-occurring or result from urban stormwater runoff, industrial or domestic wastewater discharges, oil and gas production, mining or farming. </p>
 <p><strong>Pesticides and herbicides</strong>, which may come from a variety of sources such as agriculture, urban stormwater runoff and residential uses.  </p>
 <p><strong>Organic chemical contaminants</strong>, including synthetic and volatile organic chemicals, which are by-products of industrial processes and petroleum production, and can also come from gas stations, urban stormwater runoff and septic systems.</p>
 <p><strong>Radioactive contaminants</strong>, which can be naturally occurring or be the result of oil and gas production and mining activities.  </p>
+</blockquote>
 <p>In order to ensure that tap water is safe to drink, EPA prescribes regulations that limit the amount of certain contaminants in water provided by public water systems. Food and Drug Administration regulations establish limits for contaminants in bottled water, which should provide the same protection for public health.  </p>
 <hr />
 <h2 id="health-information">Health Information</h2>
@@ -970,7 +967,7 @@ Hexachlorocyclo- pentadiene | 50 ug/L | 50 ug/L | ND | <i class="fa fa-smile-o" 
 <p>WDNR determines when compliance monitoring is to occur. Last compliance monitoring event was during the summer of 2015. Please note that copper does not have a maximum contaminant level. Instead it has an action level. To determine compliance with regulation, all results collected from monitoring event are ranked highest to lowest. The 90th percentile value of that set must at or below the 1.3 ug/L. The "level found" is the 90th percentile value from the latest monitoring event (2015). Ten percent (10%) of the samples were above this value and ninety percent (90%) of the samples were below this value.&#160;<a class="footnote-backref" href="#fnref:2" rev="footnote" title="Jump back to footnote 2 in the text">&#8617;</a></p>
 </li>
 <li id="fn:3">
-<p>Level found is the average for the year.&#160;<a class="footnote-backref" href="#fnref:3" rev="footnote" title="Jump back to footnote 3 in the text">&#8617;</a></p>
+<p>Level found reported in this section is the average of all results for the calendar year. &#160;<a class="footnote-backref" href="#fnref:3" rev="footnote" title="Jump back to footnote 3 in the text">&#8617;</a></p>
 </li>
 <li id="fn:4">
 <p>WDNR determines when compliance monitoring is to occur. Last compliance monitoring event was during the summer of 2015. Please note that lead does not have a maximum contaminant level. Instead it has an action level. To determine compliance with regulation, all results collected from monitoring event are ranked highest to lowest. The 90th percentile value of that set must at or below the 15 ug/L. The "level found" is the 90th percentile value from the latest monitoring event (2015). Ten percent (10%) of the samples were above this value and ninety percent (90%) of the samples were below this value.&#160;<a class="footnote-backref" href="#fnref:4" rev="footnote" title="Jump back to footnote 4 in the text">&#8617;</a></p>
@@ -1042,5 +1039,5 @@ Hexachlorocyclo- pentadiene | 50 ug/L | 50 ug/L | ND | <i class="fa fa-smile-o" 
 
 <!--
 MkDocs version : 0.16.1
-Build Date UTC : 2017-02-28 20:29:56
+Build Date UTC : 2017-02-28 20:43:08
 -->
