--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-93001027-1', 'northshorewc.github.io/ccr2016');
+      ga('create', 'UA-93001027-1', 'auto');
       ga('send', 'pageview');
   </script>
   
@@ -1064,5 +1064,5 @@ Substance | MCLG | MCL | Level Found | Status | Sources of Contamination
 
 <!--
 MkDocs version : 0.16.1
-Build Date UTC : 2017-03-03 12:33:11
+Build Date UTC : 2017-03-03 13:26:04
 -->
