edits after Commission meeting

--- a/readthedocs-theme/base.html
+++ b/readthedocs-theme/base.html
@@ -95,8 +95,9 @@
       {# PAGE CONTENT #}
       <div class="wy-nav-content">
         <div class="rst-content">
-          <div id="sticker">Please note this is a draft document.</div>
-          {% include "breadcrumbs.html" %}
+<!--           <div id="sticker"><a href="https://goo.gl/cKsDGB">Click here for PDF version</a></div> -->
+          <!-- {% include "breadcrumbs.html" %} -->
+          </br>
           <div role="main">
             <div class="section">
               <div class="stick"></div>
