fixed problem with link

--- a/site/index.html
+++ b/site/index.html
@@ -141,7 +141,7 @@
             <div class="section">
               <div class="stick"></div>
               
-                <p><a href="/img/ccr2016.pdf" download>Click here to download PDF version</a></p>
+                <p><a href="http://northshorewater.org/CCR2016" download>Click here to download PDF version</a></p>
 <hr />
 <p><img alt="nswc-logo" src="./img/nswc-logo-long.png" />  </p>
 <hr />
@@ -1042,5 +1042,5 @@
 
 <!--
 MkDocs version : 0.16.1
-Build Date UTC : 2017-03-08 19:00:15
+Build Date UTC : 2017-03-08 19:33:31
 -->
