--- a/site/index.html
+++ b/site/index.html
@@ -333,7 +333,7 @@
 </tr>
 <tr>
 <td>Nickel</td>
-<td align="center">NA</td>
+<td align="center">100 ug/L</td>
 <td align="center">100 ug/L</td>
 <td align="center">1.2 ug/L</td>
 <td align="center"><i class="fa fa-smile-o" aria-hidden="true"></i></td>
@@ -1044,9 +1044,5 @@
 
 <!--
 MkDocs version : 0.16.1
-<<<<<<< HEAD
-Build Date UTC : 2017-03-13 16:55:40
-=======
-Build Date UTC : 2017-03-08 19:41:58
->>>>>>> 9820917955c4383fcda3346b429a9ace6f4ff592
+Build Date UTC : 2017-03-13 17:23:05
 -->
